# unpackr

./: .gitignore  README.md  pyproject.toml
src/unpackr/: __init__.py  cli.py  core.py  pe.py  registry.py
src/unpackr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/unpackr/handlers/: __init__.py  autoit.py  costura.py  dotnet_singlefile.py  go.py  innosetup.py  java_wrapper.py  msi.py  nsis.py  nuitka.py  protector.py  pyinstaller.py  sfx7z.py  upx.py  xamarin.py
tests/: test_smoke.py  test_xamarin.py
